--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@phosphor-icons/react": "^2.1.10",
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
+    "@tanstack/react-query": "^5.90.12",
     "isbot": "^5.1.31",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
