--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,11 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "@phosphor-icons/react": "^2.1.10",
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
